--- a/src/render/markupsvg.html
+++ b/src/render/markupsvg.html
@@ -1,4 +1,4 @@
-<% parsed.forEach(function(token, index){ %>
+<% expression.forEach(function(token, index){ %>
   <text class="task-token js-item" iid="<%= token.id %>" y="15" x="<%=10 + index * 20 %>" width="20"><%= token.value %></text>
 <% }) %>
 <% tree.steps.forEach(function(step){ %>
